<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/rows"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">


            <TableRow
                android:id="@+id/culture_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_dialog_label_culture"
                    android:textColor="@color/colorTextHeader" />

                <TextView
                    android:id="@+id/tvCulture"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>


            <TableRow
                android:id="@+id/gender_row"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_dialog_label_gender"
                    android:textColor="@color/colorTextHeader" />

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:id="@+id/die_row"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_dialog_label_die"
                    android:textColor="@color/colorTextHeader" />

                <TextView
                    android:id="@+id/tvDie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>


            <TableRow
                android:id="@+id/born_row"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_dialog_label_born"
                    android:textColor="@color/colorTextHeader" />

                <TextView
                    android:id="@+id/tvBorn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:id="@+id/url_row"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_dialog_label_url"
                    android:textColor="@color/colorTextHeader" />

                <TextView
                    android:id="@+id/tvUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:id="@+id/father_row"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_dialog_label_father"
                    android:textColor="@color/colorTextHeader" />

                <TextView
                    android:id="@+id/tvFather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:id="@+id/mother_row"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_dialog_label_mother"
                    android:textColor="@color/colorTextHeader" />

                <TextView
                    android:id="@+id/tvMother"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>

            <Button
                android:id="@+id/dialogButtonOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_dialog_button_close" />
        </TableLayout>
    </LinearLayout>

</LinearLayout>